[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "fastmcp>=2.10.6",
    "gradio[mcp]>=5.30.0",
    "groq>=0.30.0",
    "huggingface-hub[mcp]>=0.32.0",
    "mcp>=1.12.1",
    "textblob>=0.19.0",
    "typer>=0.16.0",
]
